--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,85 @@
-/*
-Colors:
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+nav{
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    margin: 10px;
+}
+nav img{
+    width: 150px;
+}
+nav ul{
+    list-style-type: none;
+    float: right;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-right:15px;
+}
+nav ul li {
+    padding: 15px;
+}
+nav a {
+    color: black;
+    text-decoration: none;
+}
+header {
+    background-image: url("../images/landing.jpg");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    height: 80vh;
+}
+header h1{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 280%;
+    padding-top: 180px;
+}
+header p{
+    text-align: center;
+    padding-top: 10px;
+}
+.fboot{
+    text-align:center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.frog{
+    display: flex;
+    justify-content: space-around;
+}
+section div img{
+    width: 50px;
+    height: 50px;
+}
+div h1{
+    text-align: center ;
+    margin-bottom: 20px;
+}
+section div img{
+    display: flex;
+    justify-content: center;
+}
+.bajo{
+    background-color: lightgreen;
+    height: 500px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+section img{
+    height: 70px;
 
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
-
-*/
+}
